# fuel-flow

./: .coverage  .env  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2026_05_14_1317-7d05a383c5a5_create_stations_table.py  2026_05_14_1446-bf1e59d73db6_create_stations_table.py  2026_05_14_1522-6853cd71c0ed_initial_migration.py  2026_05_25_1721-522bf22f85d7_initial_migration.py  2026_06_01_1118-450d114a2e5b_add_favourites_table.py  2026_06_03_1040-c68cf9d55ad4_add_favourites_table.py  2026_06_03_1139-7c3e94e752bb_initial_migration.py  2026_06_04_1122-b2ef56ad218f_initial_migration.py
app/: emuns.py  main.py  registry.py  routers.py  schemes.py
app/database/: __init__.py  base.py  connect_db.py  create_tables.py  dependencies.py  models.py
app/favourites/: crud.py  services.py
app/models/: __init__.py
app/services/: tankerkoenig.py  utils.py
app/users/: __init__.py  dependencies.py  services.py
backend/: .env.example  Dockerfile  alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/app/: enums.py  main.py  registry.py
backend/core/: cache.py  config.py  constants.py  middleware.py  utils.py
backend/tests/: conftest.py  test_auth.py  test_favourites.py  test_users.py
core/: __init__.py  config.py  constants.py  db_helper.py  dbhelper.py  http_helper.py  redis_helper.py
core/helpers/: __init__.py  db_helper.py  http_helper.py  jwt_helper.py  redis_helper.py
core/models/: __init__.py  base.py  (+1 more)
frontend/: vite.config.js
tests/: conftest.py  test_auth.py  test_conn.py  test_favourites.py  test_users.py
(+68 files in other folders)
