[tool.poetry]
name = "fuel-flow"
version = "0.1.0"
description = "Gas station aggregator for Germany"
authors = ["back2prime"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.136.1"
uvicorn = {extras = ["standard"], version = "^0.46.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.49"}
asyncpg = "^0.31.0"
alembic = "^1.18.4"
pydantic-settings = "^2.14.1"
black = "^26.3.1"
geopy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"