[tool.poetry]
name = "fuel-flow"
version = "0.1.0"
description = "Gas station aggregator for Germany"
authors = ["back2prime"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.136.1"
uvicorn = {extras = ["standard"], version = "^0.46.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.49"}
asyncpg = "^0.31.0"
alembic = "^1.18.4"
pydantic-settings = "^2.14.1"
black = "^26.3.1"
geopy = "^2.4.1"
redis = "^7.4.0"
pydantic = {extras = ["email"], version = "^2.13.4"}
pyjwt = "^2.13.0"
bcrypt = "^5.0.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "0.24.0"
httpx = "^0.28.1"
python-dotenv = "^1.2.2"
pytest-cov = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
exclude = '/(\.venv|\.env.*|tests/\.env.*)/|\.env'